--- a/css/main.scss
+++ b/css/main.scss
@@ -11,5 +11,5 @@ $baseurl: '{{ site.baseurl }}';
 @import "footer";
 @import "layout";
 @import "icons";
-@import "post";
+@import "article";
 @import "breadcrumbs";
