--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -12,16 +12,16 @@ layout: default
 <div class="size margin min-height">
   <article>
     <!-- titles -->
-    <h1 class="post-title" data-aos="fade-up" data-aos-delay="200" data-aos-offset="0">{{ page.title }}</h1>
-    <div class="post-date" data-aos="fade-left" data-aos-delay="300" data-aos-offset="0">
+    <h1 class="article-title" data-aos="fade-up" data-aos-delay="200" data-aos-offset="0">{{ page.title }}</h1>
+    <div class="article-date" data-aos="fade-left" data-aos-delay="300" data-aos-offset="0">
       <time>{{ page.date | date_to_string }}</time>
       <span class="reading-time" title="Estimated read time"> - {{ minutesText }}</span>
     </div>
     <!-- titles -->
 
-    <!-- posts -->
+    <!-- articles -->
     <div class="margin-top-20 margin-bottom-50">
-      {% for x in page.questions %}
+      {% for x in page.sections %}
       <div class="list-item-2 container wrap-reverse align-items-end justify-content-center" data-aos="fade-up" data-aos-delay="0" data-aos-offset="0">
         {% if x.image %}
         <div class="list-item-2-img flex-basis-300 flex-grow-1" data-aos="fade-up" data-aos-delay="300" data-aos-offset="0">
@@ -30,12 +30,12 @@ layout: default
         {% endif %}
         <div class="flex-basis-400 flex-grow-5">
           <div class="" data-aos="fade-up" data-aos-delay="300" data-aos-offset="0">
-            <h2 class="list-post-title">
-            {{x.question}}
+            <h2 class="list-article-title">
+            {{x.section}}
             </h2>
           </div>
           <div class="" data-aos="fade-up" data-aos-delay="300" data-aos-offset="0">
-            <span class="list-post-description">
+            <span class="list-article-description">
               {{x.answer}}
             </span>
           </div>
@@ -43,7 +43,7 @@ layout: default
       </div>
       {% endfor %}
     </div>
-    <!-- posts -->
+    <!-- articles -->
 
     <!-- content -->
     {{ content }}
