--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -7,8 +7,8 @@
 
     <a href="https://slothhost.com" data-aos="fade-left" data-aos-delay="" data-aos-offset="0">
       <div class="container align-items-baseline back-to-site">
-        <div class="">
-          <span class="feather-icon icon-external-link"></span>
+        <div>
+          <i data-feather="external-link" stroke-width="3"></i>
         </div>
         <div class="back-to-site-text">
           Back to website
