--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -41,7 +41,7 @@
         margin: 10px;
         box-sizing: border-box;
         opacity: 0.5;
-        span {
+        svg {
           color: rgba(0,0,0,1);
         }
       }
