--- a/_includes/articles.html
+++ b/_includes/articles.html
@@ -7,7 +7,9 @@
   <a href="{{ site.baseurl }}{{ article.url }}" class="list-item container" data-aos="fade-up" data-aos-offset="0" data-aos-delay="100">
 
     <div class="list-item-icon container align-items-center justify-content-center">
-      <span class="feather-icon icon-{{article.icon}}" data-aos="fade-right" data-aos-offset="0" data-aos-delay="500"></span>
+      {% if article.icon != "" %}
+        <i data-feather="{{article.icon}}" data-aos="fade-right" data-aos-offset="0" data-aos-delay="500"></i>
+      {% endif %}
     </div>
 
     <div class="flex-grow-1">
