--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,9 @@
   <link rel="shortcut icon" href="{{site.url}}{{site.baseurl}}/assets/img/favicon.png">
   <link rel="icon" href="{{site.url}}{{site.baseurl}}/assets/img/favicon.png">
 
+  <script src="https://unpkg.com/feather-icons"></script>
+  <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
+  
   <!-- facebook -->
   <meta property="og:title" content="{{ site.title }}" />
   <meta property="og:type" content="website" />
