--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
   <script src="{{ site.baseurl }}/assets/js/simple-jekyll-search.min.js"></script>
   
   <script>
+    feather.replace()
     AOS.init({
       once: true
     });
