--- a/_sass/_article.scss
+++ b/_sass/_article.scss
@@ -28,6 +28,11 @@
       padding-right: 20px;
       font-size: 2rem;
       color: $colortheme;
+
+      svg {
+        height: 40px;
+        width: 40px;
+      }
     }
 
     .list-article-title {
